[metadata]
name = backdropy
version = 0.0.1
description = Layered thread context management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glevine/backdropy
project_urls =
	Bug Tracker = https://github.com/glevine/backdropy/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
